# wordle-sim

./: .gitignore  Cargo.toml
src/: io.rs  main.rs  wordio.rs
