[package]
name = "wordle-sim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
indicatif = { version = "0.17.7", features = ["rayon"] }
ndarray = { version = "0.15.6", features = ["serde"] }
rand = "0.8.5"
serde = { version = "1.0.189", features = ["derive"] }

[profile.release]
debug = true
